# desktop-utils

swaybg-random/: meson.build
swaybg-random/include/: child_handler.h  loop_element.h  output.h  output_handler.h  pictures.h  timer.h  wayland.h
swaybg-random/src/: child_handler.cpp  main.cpp  output.cpp  output_handler.cpp  pictures.cpp  timer.cpp  wayland.cpp
